@@ -1,3 +1,7 @@
+jim - Janurary 8, 2009
+	* Remove Console Script
+	* Added i18n Script
+
 jim - October 24, 2007
 	* Merged Netboot Scripts
 
